--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <body>
 
 <script type="text/x-template" id="x-component">
-    <h1>haha</h1>
+    <h5>message:</h5>
 </script>
 
 
@@ -17,21 +17,39 @@
 </div>
 
 <div id="x-container">
-    <x-component></x-component>
+    
+    <div style="border: 1px solid red;top:0;right: 0;position: fixed;width: 300px;white-space: nowrap">
+        <div is="x-component"></div>
+        <ol>
+            <li v-for="item in messages">{{item}}</li>
+        </ol>
+    </div>
 </div>
 </body>
 
 
 
 <script>
-    // Vue.component('x-component',{
-    //     template:'#x-component'
-    // });
-    new Vue({
+
+    let app = new Vue({
         components: {
-            'x-component': {template: '#x-component'}
+            'x-component': {
+                template:'#x-component'
+            },
         },
-        el: '#x-container'
+        el: '#x-container',
+        data:{messages:[]},
+        methods:{
+            log(msg){
+                if(this.messages.length>10){
+                    this.messages.splice(0,1);
+                }
+                this.messages.push(msg);
+            }
+        }
     });
+
+   
+
 </script>
 </html>
