--- a/standard/test.html
+++ b/standard/test.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Standard Test</title>
+    <script src="../node_modules/vue/dist/vue.js"></script>
+    <script src="../node_modules/lodash/lodash.js"></script>
     <script src="test.js"></script>
-    <script src="vue.js"></script>
 </head>
 <body>
 
@@ -28,7 +29,7 @@
             return {name: 'cxq'}
         },
         created() {
-            alert(this);
+            // console.log(this);
         }
     });
 
